--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 			<version>5.9.3</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
